# PhaseForge

./: .gitignore  README.md  pyproject.toml
docs/proposal/: data_evaluations.md  imp.md  proposal.md
notebook/: phaseforge.ipynb
phaseforge/: __init__.py  cli.py
phaseforge/config/: __init__.py  main.yaml
phaseforge/config/data/: common.yaml
phaseforge/config/eval/: metrics.yaml  rollout.yaml
phaseforge/config/models/: phaseforge.yaml
phaseforge/config/train/: stage1.yaml  stage2.yaml
phaseforge/data/: paths.py
phaseforge/data/common/: __init__.py  collator.py  dataset.py  normalizer.py
phaseforge/data/ingestion/: _downloader.py  cache_manager.py  state_machine.py  states.py
phaseforge/data/libero/: __init__.py  phase_labeler.py  task_index.py  vision_stripper.py
phaseforge/data/scripts/: __init__.py  download_libero.py
phaseforge/evaluations/: __init__.py
phaseforge/evaluations/metrics/: expert_utilization.py  phase_alignment.py  routing_stability.py  task_metrics.py
phaseforge/evaluations/runners/: __init__.py  offline_evaluator.py  rollout_evaluator.py
phaseforge/models/: __init__.py  base.py  phase_moe.py
phaseforge/models/baselines/: __init__.py  bc.py  oracle_moe.py  scratch_moe.py  warmstart_moe.py
phaseforge/models/components/: action_head.py  encoder.py  (+4 more)
phaseforge/trains/: __init__.py
phaseforge/utils/: config.py  io.py  registry.py  seed.py
scripts/: archive_and_upload.py  download_and_extract.py  find_checkpoint.py  inspect_cache.py  inspect_libero_hdf5.py  simulate_pipeline.py  upload_to_hf.py  verify_correctness.py
(+16 files in other folders)
