[project]
name = "phaseforge"
version = "0.1.0"
description = "Phase-Bootstrapped Mixture-of-Experts for Long-Horizon Robotic Manipulation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "torch>=2.2",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "h5py>=3.10",
    "numpy>=1.26",
    "wandb>=0.16",
    "tqdm>=4.66",
    "rich>=13.7",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    # LIBERO dataset download from the HuggingFace mirror
    "huggingface_hub>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
phaseforge-train = "phaseforge.cli:train"
phaseforge-eval  = "phaseforge.cli:evaluate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["phaseforge"]
force-include = { "phaseforge/config" = "phaseforge/config" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
